Added June 1 livestream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,6 +11,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Thursday, June 1        | 2:00pm UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]    |       
 
 ## Past Events
 
@@ -161,6 +162,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[98]: https://www.youtube.com/watch?v=qci-pz8e5nk
 [97]: https://www.youtube.com/watch?v=mcGL6Lk2IXU
 [96]: https://www.youtube.com/watch?v=OTDZIK55DX0
 [95]: https://www.youtube.com/watch?v=GBgvCTQfcVw
