--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,12 +11,12 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, June 1        | 2:00pm UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]    |       
 
 ## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, June 1       | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]|       
 | Friday, May 19         | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack][97]                       |
 | Thursday, April 27     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]          |
 | Friday, March 31       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 7][95]                                           |
