Added June 9th stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,6 +11,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Friday, June 9          | 3:00PM UTC   | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]    |
 
 ## Past Events
 
@@ -162,6 +163,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[99]: https://www.youtube.com/watch?v=l__N7V0kje0
 [98]: https://www.youtube.com/watch?v=qci-pz8e5nk
 [97]: https://www.youtube.com/watch?v=mcGL6Lk2IXU
 [96]: https://www.youtube.com/watch?v=OTDZIK55DX0
