/create/heroku/herokujava debranded

--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -115,4 +115,4 @@ Open https://hidden-woodland-03996.herokuapp.com/ to see your application
 ### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
-- [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
+- [How to build an IMDB clone with the Redis Search and Query engine](/howtos/moviesdatabase/getting-started/)
