--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -104,4 +104,4 @@ Open https://rocky-lowlands-06306.herokuapp.com/ to see your application
 ### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
-- [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
+- [How to build an IMDB clone with the Redis Search and Query engine](/howtos/moviesdatabase/getting-started/)
