/create/aws/redis-on-aws

--- a/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
+++ b/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
@@ -70,7 +70,7 @@ Click "Activate" and wait for few seconds till it gets activated. Once fully act
 ### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
-- [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
+- [How to build an IMDB clone with the Redis Search and Query engine](/howtos/moviesdatabase/getting-started/)
 
 ##
 
