--- a/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
+++ b/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
@@ -33,7 +33,7 @@ Ready to get started? Ok, let’s dive straight in.
 - [NodeJS](https://developer.redis.com/develop/node): used as an open-source, cross-platform, backend JavaScript runtime environment that executes Javascript code outside a web browser.
 - [Amazon Cognito](https://aws.amazon.com/cognito/): used to securely manage and synchronize app data for users on mobile.
 - [Redis Enterprise Cloud](https://developer.redis.com/create/rediscloud): used as a real-time database, cache, and message broker.
-- [RedisJSON](https://developer.redis.com/howtos/redisjson/getting-started): used to store, update and fetch JSON values from Redis.
+- [Redis Stack](https://developer.redis.com/quick-start): used to store, update and fetch JSON values from Redis.
 - [Socket.IO](https://socket.io/): used as a library that provides real-time, bi-directional, and event-based communication between the browser and the server.
 - [AWS Lambda](https://aws.amazon.com/lambda/): used as a serverless compute service that runs your code in response events and manages the underlying compute service automatically for you.
 - [Amazon SNS/Amazon SES](https://aws.amazon.com/sns/): a fully managed messaging service for both application-to-application (A2A) and application-to-person (A2P) communication.
@@ -173,7 +173,7 @@ npm start
 
 ### How data is stored
 
-The Redis Enterprise Cloud Database with RedisJSON module is what you’ll use to install the data.
+The [Redis Enterprise Cloud](https://redis.com/try-free) database with Redis Stack is what you’ll use to install the data.
 
 ### Auctions
 
@@ -252,7 +252,7 @@ You’ll then be taken to the sign-up page. Enter your details and click ‘sign
 
 ### Placing a bid
 
-Go to the homepage to have access to view all of the items and their auction details. All of the data here is being populated by RedisJSON and Redis Cloud. Scroll through the page and click on the item that you want to place a bid for.
+Go to the homepage to have access to view all of the items and their auction details. All of the data here is being populated by Redis Stack and Redis Cloud. Scroll through the page and click on the item that you want to place a bid for.
 
 ![placing](images/image_9.png)
 
